fix img-wrap

--- a/src/assets/css/blocks/block-info.scss
+++ b/src/assets/css/blocks/block-info.scss
@@ -1,5 +1,6 @@
 .block-info {
     display: flex;
+    margin-bottom: 6.3rem;
 
     @media screen and (max-width:$large_tablet) {
         flex-direction: column;
@@ -15,6 +16,20 @@
     .img-wrap {
         margin-right: 3.4rem;
         flex-shrink: 0;
+        width: 100%;
+        max-width: 34.2rem;
+        div {
+            position: relative;
+            padding-bottom: 100%;
+            img {
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
     }
     .content {
         padding-top: 2rem;
