--- a/src/assets/css/blocks/sidebar.scss
+++ b/src/assets/css/blocks/sidebar.scss
@@ -103,6 +103,20 @@
 
             img {
                 margin-right: 0.8rem;
+                width: 100%;
+                max-width: 3.2rem;
+                div {
+                    position: relative;
+                    padding-bottom: 100%;
+                    img {
+                        position: absolute;
+                        top: 0px;
+                        left: 0px;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
             }
             &:hover {
                 opacity: 0.7;
